force-app/main/default/objects/Lead/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <label>Age</label>
    <length>100</length>
    <type>Text</type>
</CustomField>