force-app/main/default/objects/Lead/fields/Current_valoration__c.field-meta.xml
<CustomField>
    <fullName>Current_valoration__c</fullName>
    <label>Current valoration</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>