force-app/main/default/objects/Lead/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <formula>IF(Votes__c = 0 , 0, (Current_valoration__c/ Votes__c )/5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rating</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>